popup overlap fixed & scrollbars styled

--- a/src/Reflections/ReflectionsDetails/_reflections-details.scss
+++ b/src/Reflections/ReflectionsDetails/_reflections-details.scss
@@ -93,6 +93,7 @@
 	max-height: 100%;
 	overflow: auto;
 	padding: 5px;
+	border-bottom: 1px solid $LightGrey;
 
 	.reflections-details-wrapper {
 		height: initial;
