--- a/src/resources/popup/_popup.scss
+++ b/src/resources/popup/_popup.scss
@@ -69,7 +69,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		z-index: 9;
+		z-index: 99999;
 
 		.triangle {
 			width: 0;
